Java 11 fix